<resources>
    <string name="app_name">Hotel Hub</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="welcome">Welcome</string>
    <string name="izzat_name">Izzat Almustafa</string>
    <string name="izzat_desc">Hello! I am Izzat also known as MrIzzat. I made the main menu, navigation, hotel menu room menu, settings and about us screens.</string>
    <string name="husam_desc">Hello! I am Husam also known as MrHusam. I made the Splash screen, Register, Log in</string>
    <string name="husam_name">Husam The Best</string>
    <string name="yossef_desc">Hello! I am yossef. I made everything in the reservation forms.</string>
    <string name="yossef_name">Yossef BodyBuilder</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="update">Update</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_new_password">Confirm New Password:</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">Log In</string>
    <string name="login_email">Email</string>
    <string name="password">Password</string>
    <string name="welcome2">WELCOME</string>
    <string name="sign_up">sign up</string>
    <string name="or">OR</string>
    <string name="no_rooms_available">NO ROOMS AVAILABLE</string>
    <string name="no_reserved_rooms">NO RESERVED ROOMS</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="textview">TextView</string>
    <string name="caramel_hotel">Caramel Hotel</string>
    <string name="reserve">Reserve</string>
    <string name="no_reservations">No Reservations</string>
    <string name="no_email">No Email</string>
    <string name="no_phone_number">No Phone Number</string>
    <string name="no_last_name">No Last Name</string>
    <string name="no_first_name">No First Name</string>
    <string name="address2">Address</string>
    <string name="first_name2">First Name</string>
    <string name="last_name2">Last Name</string>
    <string name="personal">Personal</string>
    <string name="pay_amount">Pay Amount:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="credit_card">Credit Card</string>
    <string name="payment">Payment</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="number_of_people">Number of people:</string>
    <string name="pay_amount2">Pay amount:</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="cash">Cash</string>
    <string name="sign_up2">Sign Up</string>
    <string name="signupinfo">please fill the fields to create your acount!</string>
    <string name="dashedline">----------------------------------------------------------------------------------------------------------------</string>
    <string name="phone_number2">Phone Number</string>
    <string name="lastname">LastName</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="email2">Email</string>
    <string name="sign_up3">Sign Up</string>
    <string name="firstname">FirstName</string>
    <string name="password2">Password</string>
    <string name="or2">OR</string>
    <string name="log_in2">Log In</string>
    <array name="settings_options">
        <item>About Us</item>
    </array>


</resources>