<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_main_menu"
    tools:context=".Change_password">

    <TextView
        android:textColor="@color/end_main_menu_gradient"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/new_password"
        />

    <EditText
        android:textColor="@color/end_main_menu_gradient"
        android:hint="@string/enter_password"
        android:id="@+id/edtPassword"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        />

    <TextView
        android:textColor="@color/end_main_menu_gradient"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/confirm_new_password"
        />

    <EditText
        android:textColor="@color/end_main_menu_gradient"
        android:hint="@string/confirm_password"
        android:id="@+id/edtConfirmPassword"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        />

    <Button
        android:id="@+id/btnChange"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        />

</androidx.appcompat.widget.LinearLayoutCompat>